fix whitespace

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,7 @@ p {
 
 .nav-menu {
     position: absolute;
-    right: 0;
+    right: 30px;
     top: 0;
     margin: 30px 0;
 }
